--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     @apply bg-gradient-to-r from-gray-900 to-blue-500;
   }
   .page {
-    @apply w-full min-h-screen px-3 flex flex-col lg:flex-row justify-center items-center gap-5;
+    @apply w-full min-h-screen p-3 flex flex-col lg:flex-row justify-center items-center gap-5;
   }
   .container {
     @apply max-w-[700px] shadow-2xl p-10 rounded-lg;
